# hr-compensation-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.cursor/agents/: incubyte-code-reviewer.md  incubyte-qa-automation.md
.cursor/plans/: address-review-warnings_864a30e2.plan.md  insights-polish-ux-pass_c3887b4e.plan.md  salary-mgmt_bugs_and_analytics_2c8dd4b6.plan.md  seed-10k-perf-validate_dcbc7a0c.plan.md
.cursor/rules/: README.md  ai-shortcuts.mdc  ai-standards.mdc  ai-workflow.mdc  incubyte-api-routes.mdc  incubyte-code-quality.mdc  incubyte-commit-hygiene.mdc  incubyte-craftsmanship.mdc  incubyte-error-handling.mdc  incubyte-fastapi-core.mdc  incubyte-frontend-react.mdc  incubyte-project-map.mdc  incubyte-sql-safety.mdc  incubyte-tdd-discipline.mdc  incubyte-testing.mdc
app/: main.py
app/core/: config.py  exceptions.py  logging.py
app/db/: seed.py  session.py
app/repositories/: employee_repository.py
app/schemas/: analytics.py  employee.py
app/services/: compensation_analysis_service.py  employee_service.py  salary_insights_service.py
artifacts/: performance.md  tradeoffs.md
artifacts/architecture/: README.md
artifacts/demo/: script.md
artifacts/planning/: README.md  frontend-architecture.md  seed-performance-strategy.md  tradeoffs-and-decisions.md  ui-ux-decisions.md
artifacts/prompts/: README.md  driving-prompts.md
data/: first_names.txt  last_names.txt
frontend/: .env.example  package-lock.json  package.json  tsconfig.app.json
scripts/: seed.py
tasks/: lessons.md  manual-test-scenarios.md  todo.md
(+83 files in other folders)
